bug: Prevent horizontal scrollbars on landing page

--- a/src/app/webfun/app.scss
+++ b/src/app/webfun/app.scss
@@ -1,5 +1,6 @@
 wf-app {
 	width: 100vw;
+	max-width: 100%;
 	min-height: 371px;
 	z-index: 1000;
 	display: flex;
